# termita

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  index.html  package.json  server.js  svelte.config.js  vite.config.js
.github/workflows/: build.yml
deploy/: Dockerfile  deploy.sh  openshift.yaml  termita
doc/: decision.md  deploy.md  improvements-plan.md  jump.md  plan.md  spec.md
src/: app.svelte  bridge.rs  main.js  main.rs  serve.rs  ssh.rs
web/: index.html  package.json  svelte.config.js  vite.config.js
web/src/: app.svelte  main.js
